--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Karim90403",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5"
